Enabling CI testing on JDK 25 (#57)